2021-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (check_struct_field_constraint): Use
	PKL_GEN_PUSH_CONTEXT instead of DUP_CONTEXT + CLEAR_CONTEXT.  It
	is more robust.
	(array_writer): Likewise.
	(array_bounder): Likewise.
	(handle_struct_field_label): Likewise.
	(handle_struct_field_constraints): Likewise.
	(struct_mapper): Likewise.
	(struct_constructor): Likewise.
	(struct_field_writer): Likewise.
	(struct_writer): Likewise.
	(struct_integrator): Likewise.
	(complex_lmap): Likewise.

	* testsuite/poke.pkl/scons-constraints-3.pk: New test.
	* testsuite/poke.map/maps-structs-constraints-4.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_mapper): Fix vars_registered with
	declarations in struct types.
	(struct_constructor): Likewise.
	* testsuite/poke.pkl/optcond-21.pk: New test.
	* testsuite/poke.map/map-optcond-12.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-05-10  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* poke/pk-mi-msg.c (struct pk_mi_msg): Added num_args field.
	(pk_mi_allocate_msg_args): Update num_args field.

2021-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl.c (LOAD_STD): Renamed from LOAD_RT.

2021-05-10  Jose E. Marchesi  <jemarch@gnu.org>,

	* libpoke/libpoke.c (pk_compiler_new_with_flags): Rename from
	pk_compiler_new.
	(pk_compiler_new): Define.
	* libpoke/libpoke.h: Prototype for pk_compiler_new_with_flags.
	(PK_F_NOSTDTYPES): Define.
	* libpoke/pkl.h: Add `flags' argument to pkl_new.
	(PKL_F_NOSTDTYPES): Define.
	* libpoke/std-types.pk: New file.
	* libpoke/Makefile.am (dist_pkgdata_DATA): Add std-types.pk.
	* libpoke/std.pk: Do not use standard types.
	* libpoke/pkl.c (pkl_new): Load std-types.pk
	(pkl_new): Get a `flags' argument and do not define standard types
	if PKL_F_NOSTDTYPES is specified.

2021-05-09  Jose E. Marchesi  <jemarch@gnu.org>
